--- a/bundle.css
+++ b/bundle.css
@@ -1,9 +1,16 @@
 body {
-	background: black;
+	background: #030200;
+	max-width: 1440px;
 }
 
-
 h1 {
+	color: #E59514;
+	font-family: "Rufina", serif;
+	font-weight: 700;
+	font-size: 26pt;	
+}
+
+h2 {
 	color: white;
 	font-family: "Rufina", serif;
 	font-weight: 700;
@@ -18,7 +25,20 @@ p {
 	font-size: 14pt;
 }
 
-.parent {
+#subtitle {
+	color: white;
+	font-family: "Open Sans",sans-serif;
+	font-weight: 200;
+	font-size: 14pt;	
+}
+
+
+#intro_block {
+	margin-left: 4%;
+	margin-bottom: 80px;
+}
+
+.parent {	
 	display: grid;
 	grid-template-columns: repeat(6, 1fr);
 	grid-template-rows: repeat(6, 1fr);
@@ -45,7 +65,7 @@ p {
 .block {
 	width: 100%;
 	height: 100%;
-	background-color: rgb(222, 162, 9);
+	background-color: #E59514;
 }
 
 .flex-grid {
